force-app/main/default/objects/Community_News_Tag__c/Community_News_Tag__c.object-meta.xml
<CustomObject>
    <description>This object allows Tags to be associated to a Community News record.</description>
    <label>Community News Tag</label>
    <nameField>
        <displayFormat>CNT-{yy}{mm}{0}</displayFormat>
        <label>Community News Tag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community News Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>