force-app/main/default/objects/Community_News_Tag__c/fields/Allow_Comments__c.field-meta.xml
<CustomField>
    <fullName>Allow_Comments__c</fullName>
    <description>Indicates if the related News article allows user&#39;s to comment on it.</description>
    <formula>Community_News__r.Allow_Comments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The News article allows user&#39;s to comment on it.</inlineHelpText>
    <label>Allow Comments</label>
    <type>Checkbox</type>
</CustomField>