force-app/main/default/objects/Community_News_Tag__c/fields/Comment_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Comment_Expiration_Date__c</fullName>
    <description>Represents the date when comments are no longer accepted for the related News article.</description>
    <formula>Community_News__r.Comment_Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date when comments are no longer accepted for this News article.</inlineHelpText>
    <label>Comment Expiration Date</label>
    <type>DateTime</type>
</CustomField>