force-app/main/default/objects/Community_News_Tag__c/fields/Community_News__c.field-meta.xml
<CustomField>
    <fullName>Community_News__c</fullName>
    <description>Allows tags to be associated with this Community News record.</description>
    <label>Community News</label>
    <referenceTo>Community_News__c</referenceTo>
    <relationshipLabel>News Tags</relationshipLabel>
    <relationshipName>Community_News_Tag</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>