force-app/main/default/objects/Community_News_Tag__c/fields/Community_Tag__c.field-meta.xml
<CustomField>
    <fullName>Community_Tag__c</fullName>
    <description>Defines the tag that is being associated with the News record.</description>
    <label>Community Tag</label>
    <referenceTo>Community_Tag__c</referenceTo>
    <relationshipLabel>News Items Tagged</relationshipLabel>
    <relationshipName>Community_NewItems_Tagged</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>