force-app/main/default/objects/Community_News_Tag__c/fields/News_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>News_Entry_Date__c</fullName>
    <description>Represents the Entry Date of the related News article.</description>
    <formula>Community_News__r.Entry_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Entry Date of this News article.</inlineHelpText>
    <label>News Entry Date</label>
    <type>DateTime</type>
</CustomField>