force-app/main/default/objects/Community_News_Tag__c/fields/News_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>News_Expiration_Date__c</fullName>
    <description>Represents the Expiration Date of the related News article.</description>
    <formula>Community_News__r.Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Expiration Date of the News article.</inlineHelpText>
    <label>News Expiration Date</label>
    <type>DateTime</type>
</CustomField>