force-app/main/default/objects/Community_News_Tag__c/fields/News_Title__c.field-meta.xml
<CustomField>
    <fullName>News_Title__c</fullName>
    <description>Represents the Title of the related New item.</description>
    <formula>Community_News__r.Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Title of this News article.</inlineHelpText>
    <label>News Title</label>
    <type>Text</type>
</CustomField>