force-app/main/default/objects/Community_News_Tag__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <description>Represents the Theme the Tag is related to.</description>
    <formula>HYPERLINK(&quot;/&quot;&amp; Community_Tag__r.Id , Community_Tag__r.Community_Theme__r.Name ,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Theme name the Tag is related to.</inlineHelpText>
    <label>Theme</label>
    <type>Text</type>
</CustomField>