force-app/main/default/objects/Community_News_Tag__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Community_News__c</columns>
    <columns>Community_Tag__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>